[tool.poetry]
name = "pomodoro"
version = "0.1.0"
description = ""
authors = ["Daniel Rice <Daniel.L.Rice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
